--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -2,145 +2,63 @@
   position: fixed;
   z-index: 10;
   width: 100%;
+
   background-color: transparent;
-  transition: background-color 0.3s, color 0.3s, padding 0.3s;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  color: var(--white);
-  &--mod {
-    background-color: var(--bg-2);
-    color: var(--white);
-  }
+  transition: background-color all 0.3s;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  color: var(--dark);
+}
 
-  &__grid {
-    display: grid;
-    gap: 32px;
-    align-items: center;
-    grid-template-columns: 405px 1fr auto auto;
-  }
+.header__grid {
+  grid-template-columns: auto 1fr auto;
 
-  &__navigation {
-    color: inherit;
-  }
-
-  &__logo {
-    color: var(--white);
-    transition: color 0.3s;
-    display: grid;
-    gap: 24px;
+  @media (max-width: 1023px) {
     grid-template-columns: auto 1fr;
-    align-items: center;
-
-    a {
-      max-width: max-content;
-      display: block;
-    }
-
-    svg {
-      display: block;
-      width: 167px;
-      height: 42px;
-    }
-
-    span {
-      font-size: 12px;
-      color: var(--grey-text2);
-      display: block;
-    }
-  }
-
-  &__button-menu {
-    display: none;
-  }
-
-  &__mobile-contacts {
-    display: none;
-  }
-
-  &__social {
-    display: none;
-  }
-
-  @media (max-width: 1380px) {
-    &__callback {
-      display: none;
-    }
-
-    &__social {
-      margin-left: auto;
-      display: block;
-    }
-
-    &__button-menu {
-      display: block;
-    }
-
-    .button--search {
-      color: var(--white);
-
-      &::before {
-        display: none;
-      }
-    }
-
-    &__navigation {
-      position: absolute;
-      /* display: none; */
-      width: 100vw;
-      height: 100vh;
-      background: var(--white);
-      color: var(--black);
-      top: 0;
-      left: -100vw;
-      display: block;
-      z-index: 10;
-      transition: all 0.3s;
-      overflow-y: auto;
-    }
-
-    &__mobile-contacts {
-      display: block;
-      padding: 25px 25px 40px;
-
-      b {
-        display: block;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 110%;
-        color: var(--black-text);
-      }
-
-      .phone {
-        display: block;
-        font-weight: 600;
-        font-size: 20px;
-        margin-bottom: 12px;
-      }
-      link {
-        display: block;
-      }
-    }
-  }
-
-  @media (max-width: 767px) {
-    padding-top: 12px;
-    padding-bottom: 12px;
-
-    &__grid {
-      gap: 12px;
-      grid-template-columns: 1fr auto auto;
-    }
-
-    &__logo {
-      display: block;
-
-      span {
-        display: none;
-      }
-    }
-
-    &__social {
-      display: none;
-    }
   }
 }
+
+.header__logo {
+  width: 100%;
+  max-width: 233px;
+  @media (max-width: 767px) {
+  }
+}
+
+.header__nav {
+  @media (max-width: 1023px) {
+    display: none;
+  }
+}
+
+.header__contacts {
+  width: 100%;
+  max-width: 360px;
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+
+  @media (max-width: 1380px) {
+    grid-template-columns: repeat(1, auto);
+  }
+  @media (max-width: 767px) {
+
+  }
+}
+
+.header__tel {
+}
+.header__link {
+}
+.header__button-menu {
+  display: none;
+
+  @media (max-width: 1023px) {
+    display: flex;
+  }
+}
+
+// BLOCKS
+
+
