--- a/css/base/_root.scss
+++ b/css/base/_root.scss
@@ -1,5 +1,5 @@
 :root {
-  --font-family: font-family: "Inter", sans-serif;
+  --font-family:  "Inter", sans-serif;
 
   --orange: #ff9600;
 	--darkorange: #f05000;
