--- a/css/blocks/_button-menu.scss
+++ b/css/blocks/_button-menu.scss
@@ -1,14 +1,22 @@
 .button-menu {
   position: relative;
-  align-items: center;
-  justify-content: center;
+
   cursor: pointer;
   background: transparent;
   border: none;
-  width: 45px;
-  height: 45px;
+
+  width: 48px;
+  height: 48px;
   display: flex;
-  // display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--darkorange);
+  color: var(--white);
+
+  @media (max-width: 767px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .button-menu span,
@@ -16,40 +24,30 @@
 .button-menu span::before {
   flex-shrink: 0;
   position: absolute;
-  width: 30px;
+  width: 16px;
   height: 3px;
   border-radius: 4px;
-  background-color: #ffffff;
+  background-color: var(--white);
+}
+
+.button-menu span::before {
+  width: 14px;
+}
+.button-menu span::after {
+  width: 12px;
 }
 
 .button-menu span::after,
 .button-menu span::before {
   content: "";
   display: block;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .button-menu span::before {
-  -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
 }
 
 .button-menu span::after {
-  -webkit-transform: translateY(8px);
   transform: translateY(8px);
 }
-
-// @media (max-width: 1150px) {
-//   .button-menu {
-//     display: flex;
-//   }
-// }
-
-// @media (max-width: 600px) {
-//   .button-menu span,
-//   .button-menu span::after,
-//   .button-menu span::before {
-//     width: 32px;
-//   }
-// }
