--- a/css/blocks/_grid-base.scss
+++ b/css/blocks/_grid-base.scss
@@ -1,18 +1,29 @@
-.wrapper {
+.grid-base {
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(12, 1fr);
   max-width: calc(1504px + (48px * 2));
   width: 100%;
   margin-inline: auto;
   padding-inline: 48px;
+  align-items: center;
 
   @media (max-width: 1600px) {
     max-width: 100%;
     padding-inline: 40px;
   }
 
+  @media (max-width: 1380px) {
+
+  }
+
   @media (max-width: 1023px) {
+    grid-template-columns: repeat(6, 1fr);
     padding-inline: 40px;
   }
   @media (max-width: 767px) {
     padding-inline: 20px;
+    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
