--- a/css/blocks/_link.scss
+++ b/css/blocks/_link.scss
@@ -1,12 +1,40 @@
 .link {
-  font-weight: 500;
-  font-size: 14px;
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: underline;
-  color: var(--yellow);
-  transition: color 0.3s;
+  text-align: right;
+  color: var(--dark);
+  text-decoration: none;
+  transition: all 0.3s;
+  position: relative;
+  &::after {
+    content: "";
+    display: block;
+    width: 0;
+    opacity: 0;
+    transition: all 0.3s;
+    height: 1px;
+    background-color: var(--orange);
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+  }
 
-  &:hover {
-    color: var(--yellow4);
+  &:hover,
+  &:active,
+  &:focus {
+    color: var(--orange);
+
+    &::after {
+      width: 100%;
+      opacity: 1;
+    }
+  }
+}
+
+.link--mod {
+  &::after {
+    display: none;
   }
 }
