--- a/css/main.scss
+++ b/css/main.scss
@@ -9,14 +9,18 @@
 // @import "./blocks/hero";
 // @import "./blocks/accordion";
 // @import "./blocks/button";
-// @import "./blocks/title";
-// @import "./blocks/wrapper";
+@import "./blocks/button";
+@import "./blocks/main";
+@import "./blocks/wrapper";
+@import "./blocks/grid-base";
+@import "./blocks/title";
+
 // @import "./blocks/main-nav";
-// @import "./blocks/link";
+@import "./blocks/link";
 // @import "./blocks/search";
 // @import "./blocks/social";
-// @import "./blocks/button-menu";
-// @import "./blocks/logotype";
+@import "./blocks/button-menu";
+@import "./blocks/logotype";
 // @import "./blocks/item-tag";
 // @import "./blocks/figure";
 // @import "./blocks/preview-card";
@@ -33,7 +37,7 @@
 // @import "./blocks/catalog-filter";
 
 // sections
-// @import "./sections/header";
+@import "./sections/header";
 
 // @import "./sections/section";
 // @import "./sections/inner-top";
@@ -54,45 +58,16 @@
 // @import "./pages/page";
 
 // activity
-// @import "./activity/header-sticky";
-// @import "./activity/menu-open";
+@import "./activity/header-sticky";
+@import "./activity/menu-open";
 // @import "./activity/mobile-nav-accordion";
 // @import "./activity/search-show";
 
 // effects
 // @import "./effects/click";
 
-// @media (max-width: 1380px)
-
-// .autoplay-progress {
-//   position: absolute;
-//   z-index: 3;
-//   left: 0;
-//   bottom: 16px;
-//   z-index: 10;
-//   width: 48px;
-//   height: 48px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   font-weight: bold;
-//   color: var(--swiper-theme-color);
-// }
-
-// .autoplay-progress svg {
-//   --progress: 0;
-//   position: absolute;
-//   left: 0;
-//   top: 0px;
-//   z-index: 10;
-//   width: 100%;
-//   height: 100%;
-//   stroke-width: 4px;
-//   stroke: var(--swiper-theme-color);
-//   fill: none;
-//   stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
-//   stroke-dasharray: 125.6;
-//   transform: rotate(-90deg);
-// }
-
-
+// Используемые медиа запросы
+@media (max-width: 1600px) {}
+@media (max-width: 1380px) {}
+@media (max-width: 1023px) {}
+@media (max-width: 767px) {}
