--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@
 @import "./blocks/grid-base";
 @import "./blocks/title";
 
-// @import "./blocks/main-nav";
+@import "./blocks/main-navigation";
 @import "./blocks/link";
 // @import "./blocks/search";
 // @import "./blocks/social";
