--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -5,13 +5,17 @@
 
   background-color: transparent;
   transition: background-color all 0.3s;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  // padding-top: 16px;
+  // padding-bottom: 16px;
+  padding: 0;
   color: var(--dark);
 }
 
 .header__grid {
   grid-template-columns: auto 1fr auto;
+  @media (max-width: 1380px) {
+    gap: 16px;
+  }
 
   @media (max-width: 1023px) {
     grid-template-columns: auto 1fr;
@@ -19,8 +23,6 @@
 }
 
 .header__logo {
-  width: 100%;
-  max-width: 233px;
   @media (max-width: 767px) {
   }
 }
@@ -33,17 +35,22 @@
 
 .header__contacts {
   width: 100%;
-  max-width: 360px;
+  max-width: 365px;
   display: grid;
-  gap: 32px;
+  gap: 0 32px;
   grid-template-columns: repeat(2, auto);
   align-items: center;
 
   @media (max-width: 1380px) {
     grid-template-columns: repeat(1, auto);
   }
+  @media (max-width: 1023px) {
+    grid-template-columns: repeat(3, auto);
+    gap: 24px;
+    max-width: max-content;
+    margin-left: auto;
+  }
   @media (max-width: 767px) {
-
   }
 }
 
@@ -58,7 +65,3 @@
     display: flex;
   }
 }
-
-// BLOCKS
-
-
