--- a/css/main.css
+++ b/css/main.css
@@ -681,17 +681,69 @@ input[type=radio].visually-hidden {
   font-size: 18px;
 }
 
+.main-navigation__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: auto;
+  max-width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-navigation__item {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
+.main-navigation__link {
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 154%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--dark);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 24px;
+  height: 96px;
+  background-color: transparent;
+}
+.main-navigation__link:hover, .main-navigation__link:active, .main-navigation__link:focus {
+  background: var(--darkorange);
+  color: var(--white);
+}
+@media (max-width: 1380px) {
+  .main-navigation__link {
+    padding: 0 14px;
+  }
+}
+
 .link {
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-align: right;
-  color: var(--dark);
   text-decoration: none;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   position: relative;
+  color: var(--orange);
 }
 .link::after {
   content: "";
@@ -703,7 +755,7 @@ input[type=radio].visually-hidden {
   height: 1px;
   background-color: var(--orange);
   position: absolute;
-  bottom: -2px;
+  bottom: 2px;
   left: 0;
 }
 .link:hover, .link:active, .link:focus {
@@ -714,6 +766,9 @@ input[type=radio].visually-hidden {
   opacity: 1;
 }
 
+.link--mod {
+  color: var(--dark);
+}
 .link--mod::after {
   display: none;
 }
@@ -801,13 +856,17 @@ input[type=radio].visually-hidden {
   background-color: transparent;
   -webkit-transition: background-color all 0.3s;
   transition: background-color all 0.3s;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding: 0;
   color: var(--dark);
 }
 
 .header__grid {
   grid-template-columns: auto 1fr auto;
+}
+@media (max-width: 1380px) {
+  .header__grid {
+    gap: 16px;
+  }
 }
 @media (max-width: 1023px) {
   .header__grid {
@@ -815,10 +874,6 @@ input[type=radio].visually-hidden {
   }
 }
 
-.header__logo {
-  width: 100%;
-  max-width: 233px;
-}
 @media (max-width: 1023px) {
   .header__nav {
     display: none;
@@ -827,9 +882,9 @@ input[type=radio].visually-hidden {
 
 .header__contacts {
   width: 100%;
-  max-width: 360px;
+  max-width: 365px;
   display: grid;
-  gap: 32px;
+  gap: 0 32px;
   grid-template-columns: repeat(2, auto);
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -838,6 +893,16 @@ input[type=radio].visually-hidden {
 @media (max-width: 1380px) {
   .header__contacts {
     grid-template-columns: repeat(1, auto);
+  }
+}
+@media (max-width: 1023px) {
+  .header__contacts {
+    grid-template-columns: repeat(3, auto);
+    gap: 24px;
+    max-width: -webkit-max-content;
+    max-width: -moz-max-content;
+    max-width: max-content;
+    margin-left: auto;
   }
 }
 .header__button-menu {
@@ -854,13 +919,14 @@ input[type=radio].visually-hidden {
 .header-sticky .header {
   background-color: var(--white);
   color: var(--black);
-  padding-top: 8px;
-  padding-bottom: 8px;
   -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
 }
 .header-sticky .header__logo .logotype svg {
   width: 102px;
+}
+.header-sticky .main-navigation__link {
+  height: 64px;
 }
 
 .menu-open .mobile-navigation {
